// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomizePopover — snapshots should match snapshot for closed state 1`] = `
<div
  aria-label="Floating tools"
  class="absolute left-3 top-20 z-50 wb-surface border wb-outline rounded-xs flex flex-col items-center py-2.5 px-2 gap-1.5 shadow-xl cursor-grab active:cursor-grabbing select-none"
  draggable="false"
  role="toolbar"
  style="width: 44px; user-select: none;"
>
  <div
    class="w-5 h-2 flex flex-col gap-0.5 justify-center items-center opacity-30 cursor-move mb-1 shrink-0"
  >
    <div
      class="w-full h-[1px] bg-foreground"
    />
    <div
      class="w-full h-[1px] bg-foreground"
    />
    <div
      class="w-full h-[1px] bg-foreground"
    />
  </div>
  <div
    class="flex flex-col items-center gap-1.5"
  >
    <button
      aria-label="Select & Move Tool (V)"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 tool-active-glow"
      title="Select & Move Tool (V)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mouse-pointer2 lucide-mouse-pointer-2 w-3.5 h-3.5 fill-current"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
        />
      </svg>
    </button>
    <button
      aria-label="Marquee Selection Tool (M)"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Marquee Selection Tool (M)"
    >
      <svg
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
        viewBox="0 0 24 24"
      >
        <rect
          height="18"
          rx="2.5"
          stroke-dasharray="3 3"
          width="18"
          x="3"
          y="3"
        />
      </svg>
    </button>
    <button
      aria-label="Transform/Scale Tool (T)"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Transform/Scale Tool (T)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-scale w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3v18"
        />
        <path
          d="m19 8 3 8a5 5 0 0 1-6 0zV7"
        />
        <path
          d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
        />
        <path
          d="m5 8 3 8a5 5 0 0 1-6 0zV7"
        />
        <path
          d="M7 21h10"
        />
      </svg>
    </button>
    <div
      class="relative"
    >
      <button
        aria-label="Add Primitives & Ports (A)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
        title="Add Primitives & Ports (A)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
      </button>
    </div>
    <div
      class="w-6 h-[1px] wb-outline opacity-20 my-1 shrink-0"
    />
    <button
      aria-label="Blueprints & Templates (B)"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Blueprints & Templates (B)"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sparkles w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
        />
        <path
          d="M20 2v4"
        />
        <path
          d="M22 4h-4"
        />
        <circle
          cx="4"
          cy="20"
          r="2"
        />
      </svg>
    </button>
    <button
      aria-label="Module Signature & Governance"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Module Signature & Governance"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
    <div
      class="w-6 h-[1px] wb-outline opacity-20 my-1 shrink-0"
    />
    <button
      aria-label="HIL Engine: Connect to WASM"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="HIL Engine: Connect to WASM"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-zap w-3.5 h-3.5 fill-current"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
        />
      </svg>
    </button>
    <button
      aria-label="Enter Zen Mode"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Enter Zen Mode"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-maximize2 lucide-maximize-2 w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h6v6"
        />
        <path
          d="m21 3-7 7"
        />
        <path
          d="m3 21 7-7"
        />
        <path
          d="M9 21H3v-6"
        />
      </svg>
    </button>
    <div
      class="w-6 h-[1px] wb-outline opacity-20 my-1 shrink-0"
    />
    <button
      aria-label="Customize Toolbar"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 opacity-40 hover:opacity-100 transition-opacity"
      title="Customize Toolbar"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings2 lucide-settings-2 w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 17H5"
        />
        <path
          d="M19 7h-9"
        />
        <circle
          cx="17"
          cy="17"
          r="3"
        />
        <circle
          cx="7"
          cy="7"
          r="3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`CustomizePopover — snapshots should match snapshot for open popover (all visible) 1`] = `
<div
  class="fixed left-16 top-20 z-[100] w-[260px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl animate-in fade-in zoom-in-95 duration-100"
>
  <div
    class="flex items-center justify-between px-3 py-2 border-b wb-outline"
  >
    <span
      class="text-[8px] font-black uppercase tracking-[0.15em] wb-text"
    >
      Customize Toolbar
    </span>
    <button
      class="flex items-center gap-1 text-[7px] font-bold uppercase tracking-wider wb-text-muted hover:text-primary transition-colors"
      title="Reset to default"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Reset
    </button>
  </div>
  <div
    class="max-h-[300px] overflow-y-auto py-1"
  >
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mouse-pointer2 lucide-mouse-pointer-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Select Tool
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
        >
          <rect
            height="18"
            rx="2.5"
            stroke-dasharray="3 3"
            width="18"
            x="3"
            y="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Marquee Select
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Transform Tool
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Add Primitives
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sparkles w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
          />
          <path
            d="M20 2v4"
          />
          <path
            d="M22 4h-4"
          />
          <circle
            cx="4"
            cy="20"
            r="2"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Blueprints
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Config
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-zap w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Live Mode
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize2 lucide-maximize-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="m21 3-7 7"
          />
          <path
            d="m3 21 7-7"
          />
          <path
            d="M9 21H3v-6"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Zen Mode
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="px-3 py-1.5 border-t wb-outline flex items-center justify-between"
  >
    <span
      class="text-[6px] font-mono wb-text-muted uppercase tracking-wider"
    >
      Drag to reorder
    </span>
    <span
      class="text-[6px] font-mono wb-text-muted"
    >
      11
       / 
      11
       visible
    </span>
  </div>
</div>
`;

exports[`CustomizePopover — snapshots should match snapshot for open popover (empty config) 1`] = `
<div
  class="fixed left-16 top-20 z-[100] w-[260px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl animate-in fade-in zoom-in-95 duration-100"
>
  <div
    class="flex items-center justify-between px-3 py-2 border-b wb-outline"
  >
    <span
      class="text-[8px] font-black uppercase tracking-[0.15em] wb-text"
    >
      Customize Toolbar
    </span>
    <button
      class="flex items-center gap-1 text-[7px] font-bold uppercase tracking-wider wb-text-muted hover:text-primary transition-colors"
      title="Reset to default"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Reset
    </button>
  </div>
  <div
    class="max-h-[300px] overflow-y-auto py-1"
  >
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mouse-pointer2 lucide-mouse-pointer-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Select Tool
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
        >
          <rect
            height="18"
            rx="2.5"
            stroke-dasharray="3 3"
            width="18"
            x="3"
            y="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Marquee Select
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Transform Tool
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Add Primitives
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sparkles w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
          />
          <path
            d="M20 2v4"
          />
          <path
            d="M22 4h-4"
          />
          <circle
            cx="4"
            cy="20"
            r="2"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Blueprints
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Config
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-zap w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Live Mode
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize2 lucide-maximize-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="m21 3-7 7"
          />
          <path
            d="m3 21 7-7"
          />
          <path
            d="M9 21H3v-6"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Zen Mode
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="px-3 py-1.5 border-t wb-outline flex items-center justify-between"
  >
    <span
      class="text-[6px] font-mono wb-text-muted uppercase tracking-wider"
    >
      Drag to reorder
    </span>
    <span
      class="text-[6px] font-mono wb-text-muted"
    >
      11
       / 
      11
       visible
    </span>
  </div>
</div>
`;

exports[`CustomizePopover — snapshots should match snapshot for open popover (some hidden) 1`] = `
<div
  class="fixed left-16 top-20 z-[100] w-[260px] wb-surface border wb-outline rounded-xs shadow-2xl backdrop-blur-xl animate-in fade-in zoom-in-95 duration-100"
>
  <div
    class="flex items-center justify-between px-3 py-2 border-b wb-outline"
  >
    <span
      class="text-[8px] font-black uppercase tracking-[0.15em] wb-text"
    >
      Customize Toolbar
    </span>
    <button
      class="flex items-center gap-1 text-[7px] font-bold uppercase tracking-wider wb-text-muted hover:text-primary transition-colors"
      title="Reset to default"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-rotate-ccw w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
        />
        <path
          d="M3 3v5h5"
        />
      </svg>
      Reset
    </button>
  </div>
  <div
    class="max-h-[300px] overflow-y-auto py-1"
  >
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  opacity-40"
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-mouse-pointer2 lucide-mouse-pointer-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.037 4.688a.495.495 0 0 1 .651-.651l16 6.5a.5.5 0 0 1-.063.947l-6.124 1.58a2 2 0 0 0-1.438 1.435l-1.579 6.126a.5.5 0 0 1-.947.063z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Select Tool
      </span>
      <button
        aria-label="Show button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Show button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off w-2.5 h-2.5 wb-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          class="w-3 h-3"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
          viewBox="0 0 24 24"
        >
          <rect
            height="18"
            rx="2.5"
            stroke-dasharray="3 3"
            width="18"
            x="3"
            y="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Marquee Select
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-scale w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v18"
          />
          <path
            d="m19 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
          />
          <path
            d="m5 8 3 8a5 5 0 0 1-6 0zV7"
          />
          <path
            d="M7 21h10"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Transform Tool
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Add Primitives
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sparkles w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
          />
          <path
            d="M20 2v4"
          />
          <path
            d="M22 4h-4"
          />
          <circle
            cx="4"
            cy="20"
            r="2"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Blueprints
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  opacity-40"
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Config
      </span>
      <button
        aria-label="Show button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Show button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off w-2.5 h-2.5 wb-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  "
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-zap w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Live Mode
      </span>
      <button
        aria-label="Hide button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Hide button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye w-2.5 h-2.5 text-primary/60"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex items-center gap-2 px-3 py-1.5 transition-all  opacity-40"
      draggable="true"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-grip-vertical w-2.5 h-2.5 shrink-0 wb-text-muted cursor-grab active:cursor-grabbing"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="9"
          cy="12"
          r="1"
        />
        <circle
          cx="9"
          cy="5"
          r="1"
        />
        <circle
          cx="9"
          cy="19"
          r="1"
        />
        <circle
          cx="15"
          cy="12"
          r="1"
        />
        <circle
          cx="15"
          cy="5"
          r="1"
        />
        <circle
          cx="15"
          cy="19"
          r="1"
        />
      </svg>
      <span
        class="shrink-0 wb-text-muted"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize2 lucide-maximize-2 w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 3h6v6"
          />
          <path
            d="m21 3-7 7"
          />
          <path
            d="m3 21 7-7"
          />
          <path
            d="M9 21H3v-6"
          />
        </svg>
      </span>
      <span
        class="flex-1 text-[8px] font-bold uppercase tracking-wider wb-text truncate"
      >
        Zen Mode
      </span>
      <button
        aria-label="Show button"
        class="p-0.5 rounded-xs hover:bg-white/10 transition-colors"
        title="Show button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off w-2.5 h-2.5 wb-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="px-3 py-1.5 border-t wb-outline flex items-center justify-between"
  >
    <span
      class="text-[6px] font-mono wb-text-muted uppercase tracking-wider"
    >
      Drag to reorder
    </span>
    <span
      class="text-[6px] font-mono wb-text-muted"
    >
      8
       / 
      11
       visible
    </span>
  </div>
</div>
`;
